# dislocation-avalanches-earthquakes

./: CMakeLists.txt  README.md
cmake/: FindCppUTest.cmake  FindUMFPACK.cmake
include/: adiabatic_stress.h  argreader.h  constants.h  dislocation.h  fpoint.h  precision_handler.h  simulation.h  simulation_data.h  utility.h
include/fields/: analytic_field.h  field.h
src/: CMakeLists.txt  adiabatic_stress.cpp  argreader.cpp  main.cpp  precision_handler.cpp  simulation.cpp  simulation_data.cpp
src/fields/: CMakeLists.txt  analytic_field.cpp  field.cpp
